
    MAPREDUCE-6019. MapReduce changes for exposing YARN/MR endpoints on multiple
    interfaces. (Craig Welch, Milan Potocnik, Arpit Agarwal via xgong)

    MAPREDUCE-883. harchive: Document how to unarchive (Akira AJISAKA and
      Koji Noguchi via aw)

    MAPREDUCE-4791. Javadoc for KeyValueTextInputFormat should include default 
      separator and how to change it (Akira AJISAKA via aw)

  BUG FIXES

    MAPREDUCE-5714. Removed forceful JVM exit in shutDownJob.  
                     (Jinghui Wang via Eric Yang)

    MAPREDUCE-3194. "mapred mradmin" command is broken in mrv2
                     (Jason Lowe via bobby)

    MAPREDUCE-3462. Fix Gridmix JUnit testcase failures.
                    (Ravi Prakash and Ravi Gummadi via amarrk)

    MAPREDUCE-3349. Log rack-name in JobHistory for unsuccessful tasks.
                    (Devaraj K and Amar Kamat via amarrk)

    MAPREDUCE-3412. Fix 'ant docs'. (amarrk)

    MAPREDUCE-3346. [Rumen] LoggedTaskAttempt#getHostName() returns null.
                    (amarrk)

    MAPREDUCE-2950. [Gridmix] TestUserResolve fails in trunk.
                    (Ravi Gummadi via amarrk)

    MAPREDUCE-2784. [Gridmix] Bug fixes in ExecutionSummarizer and
    ResourceUsageMatcher. (amarrk)

    MAPREDUCE-2978. Fixed test-patch to make Jenkins report correct number of
    findBugs, correct links to findBugs artifacts and no links to the
    artifacts when there are no warnings. (Tom White via vinodkv).

    MAPREDUCE-3664. Federation Documentation has incorrect configuration example.
    (Brandon Li via jitendra)

    MAPREDUCE-1740. NPE in getMatchingLevelForNodes when node locations are 
    variable depth (ahmed via tucu) [IMPORTANT: this is dead code in trunk]

    MAPREDUCE-3990. MRBench allows Long-sized input-lines value
    but parses CLI argument as an Integer. (harsh)

    MAPREDUCE-3868. Make Raid Compile. (Weiyan Wang via schen)

    MAPREDUCE-4685. DBCount should not use ACCESS. (Viji via harsh)
